--- a/2-basic-data-manipulation/2.2-variables.md
+++ b/2-basic-data-manipulation/2.2-variables.md
@@ -58,7 +58,7 @@ In JavaScript convention, ordinary variables are named with [lower camel case](<
 
 ## Exercises
 
-Using the Chrome Dev Tools Console, write code to represent each of the following. Use descriptive variable names that explain what you are calculating. You will need to search the web for some formulas. When you are done, paste the code into a Slack message to yourself using [Slack's code formatting](../course-logistics/course-methodology/communication.md#formatcodeinslack).
+Using the Chrome Dev Tools Console, write code to represent each of the following. Use descriptive variable names that explain what you are calculating. You will need to search the web for some formulas.
 
 1. Calculate the circumference of a circle given its radius
 2. Convert Celsius to Fahrenheit
